_work/css/grid.css
/* grid.css defining grids for my site */

[class*='col-'] {
	float: left;
	padding: 0;
	text-align: center;
}

.col-1of2 {
	width: 50%;
}

.grid:after {
	content: "";
	display: block;
	clear: both;
}

*, *:after, *:before {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

@media (max-width: 800px) {
	.col-1of2 {
		width: 100%;
	}
} 

/* Defining styles for our 3 column grid */

.col-1of3 {
	width: 33.333%;
}

@media (max-width: 600px) {
	.col-1of3 {
		width:100%;
	}
}

/* Defining styles for our 6 column grid */

.col-1of6 {
	width: 16.667%;
}

@media (max-width: 600px){
	.col-1of6 {
		width: 100%;
	}
}

/* Defining styles for our 4 column grid */

.col-1of4 {
	width: 25%;
	text-align: left;
	margin-bottom: 1rem;
}

@media (max-width: 600px){
	.col-1of4 {
		width: 100%;
	}
}

/* Defining styles for our sidebar menu */

aside {
	float: left;
	width: 20%;
	height: 100%;
	margin-right: 1.1rem;
	color: red;
}

aside h3 {
	text-decoration: underline;
}

aside ul {
	text-align: left;
	list-style-type: none;
	padding-left: 0.1rem;
}

aside ul .genre{
}

aside ul .sub-genre{
	padding-left: 1rem;
}

aside ul li a:link, aside ul li a:visited, aside ul li a:hover{
	font-size: 0.75rem;
	color: black;
}

/* Defining styles for our 5 column grid */

.col-1of5 {
	width: 20%;
	text-align: left;
	margin-bottom: 1rem;
}

@media (max-width: 600px){
	.col-1of5 {
		width: 100%;
	}
}

